[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leetcrypto"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "pnemani1993", email = "sastry.nemani1993@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  numpy = ""
  requests = ""
]

[project.urls]
Documentation = "https://github.com/pnemani1993/leetcrypto#readme"
Issues = "https://github.com/pnemani1993/leetcrypto/issues"
Source = "https://github.com/pnemani1993/leetcrypto"

[tool.hatch.version]
path = "src/leetcrypto/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/leetcrypto tests}"

[tool.coverage.run]
source_pkgs = ["leetcrypto", "tests"]
branch = true
parallel = true
omit = [
  "src/leetcrypto/__about__.py",
]

[tool.coverage.paths]
leetcrypto = ["src/leetcrypto", "*/leetcrypto/src/leetcrypto"]
tests = ["tests", "*/leetcrypto/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
